--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.0.0",
     "@angular/material": "^9.1.1",
+    "@angular/material-moment-adapter": "^9.2.0",
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
     "firebase": "^7.11.0",
+    "moment": "^2.24.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
