--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "~9.0.0",
     "firebase": "^7.11.0",
     "moment": "^2.24.0",
+    "ngx-image-cropper": "^3.1.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
