--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
     "firebase": "^7.11.0",
+    "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "ngx-image-cropper": "^3.1.4",
     "rxjs": "~6.5.4",
